# scems-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  app.cmake  rustfmt.toml
.cargo/: config.toml
main/: Cargo.toml
main/src/: example.rs  lib.rs  model.rs
main/src/example/: adc.rs  io_lamp.rs  uart_echo.rs
main/src/model/: challen_v2_f429.rs  nucleo_h563zi.rs
platform/challen-v2-f429/: .mxproject  CMakeLists.txt  STM32F429XX_FLASH.ld  challen-v2-f429.cfg  challen-v2-f429.initialize.c  challen-v2-f429.ioc  challen-v2-f429.main.c  challen-v2-f429.main.h
platform/challen-v2-f429/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
platform/challen-v2-f429/Core/Src/: can.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
platform/challen-v2-f429/cmake/stm32cubemx/: CMakeLists.txt
platform/nucleo-h563zi/: .gitignore  CMakeLists.txt  app.cmake  nucleo-h563zi.ioc
platform/nucleo-h563zi/AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
platform/nucleo-h563zi/Core/Inc/: stm32h5xx_it.h
platform/nucleo-h563zi/Core/Src/: app_threadx.c  eth.c  gpio.c  main.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c
platform/nucleo-h563zi/cmake/: gcc-arm-none-eabi.cmake
platform/nucleo-h563zi/cmake/stm32cubemx/: CMakeLists.txt
platform/nucleo-h563zi/cmw/: sces-conf.h
platform/stm32h573i-dk/: .gitignore  CMakeLists.txt  stm32h573i-dk.ioc
platform/stm32h573i-dk/Core/Inc/: app_threadx.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
platform/stm32h573i-dk/Core/Src/: app_threadx.c  eth.c  gpio.c  main.c  stm32h5xx_it.c
platform/stm32h573i-dk/cmake/: gcc-arm-none-eabi.cmake
platform/stm32h573i-dk/cmake/stm32cubemx/: CMakeLists.txt
scems/: Cargo.toml
scems-addons/: Cargo.toml
scems-addons/scems-svc/: Cargo.toml
scems-addons/scems-svc-alive/: Cargo.toml
scems-addons/scems-svc-alive/src/: alive.rs  native.rs  svc.rs
scems-addons/scems-svc-alive/src/native/: queue.rs  status.rs
scems-addons/scems-svc-console/: Cargo.toml
scems-addons/scems-svc-console/src/: console.rs  dispartches.rs  lib.rs  native.rs  svc.rs
scems-addons/scems-svc-console/src/console/: dispatch.rs  print.rs
scems-addons/scems-svc-console/src/native/: cache.rs  dispatch.rs  execute.rs  print.rs
scems-addons/src/: lib.rs
scems-addons/src/service/console/: dispartches.rs  mod.rs  native.rs  terminal.rs
scems/marco/: Cargo.toml
scems/marco/src/: enum_marco.rs  lib.rs  mcu.rs
scems/scems/: Cargo.toml
scems/scems-derive/: Cargo.toml
scems/scems-derive/src/types/: enums.rs
scems/scems-mcu/: Cargo.toml
scems/scems-mcu-stm32/: Cargo.toml
scems/scems-mcu-stm32/src/: lib.rs  native.rs  sample_queue.rs
scems/scems-mcu-stm32/src/device/: adc.rs  can.rs  flash.rs  i2c.rs  io.rs  spi.rs  uart.rs  wd.rs
scems/scems-mcu-stm32/src/native/: can.rs  io.rs  iwdg.rs
scems/scems-mcu/src/: adc.rs  can.rs  flash.rs  i2c.rs  io.rs  lib.rs  spi.rs  tim.rs  uart.rs  wd.rs
scems/scems-os/: Cargo.toml  task.rs
scems/scems-os-cmsis/: Cargo.toml
scems/scems-os-cmsis/src/: events.rs  kernel.rs  lib.rs  mem.rs  message_queue.rs  mutex.rs  native.rs  semaphore.rs  sxmutex.rs  task.rs  timer.rs
scems/scems-os/src/: events.rs  lib.rs  mem.rs  message_queue.rs  mutex.rs  semaphore.rs  task.rs  timer.rs
scems/scems/src/: cell.rs  lib.rs  value.rs
scems/src/: common.rs  lib.rs  mcu.rs
scems/src/common/: cast.rs  log.rs  mod.rs  result.rs
scems/src/mcu/: common.rs  vendor.rs
scems/src/mcu/common/: adc.rs  can.rs  flash.rs  i2c.rs  io.rs  mod.rs  spi.rs  tim.rs  uart.rs  wd.rs
scems/src/mcu/vendors/: mod.rs  stm.rs
scems/src/mcu/vendors/stm/common/: device_queue.rs  mod.rs
scems/src/mcu/vendors/stm/native/: adc.rs  can.rs  common.rs  dma.rs  flash.rs  i2c.rs  io.rs  iwdg.rs  mod.rs  spi.rs  uart.rs
scems/src/mcu/vendors/stm/wrapper/: adc.rs  can.rs  flash.rs  i2c.rs  io.rs  mod.rs  spi.rs  uart.rs  wd.rs
scems/src/os/: common.rs  mod.rs
scems/src/os/common/: events.rs  kernel.rs  mem.rs  message_queue.rs  mutex.rs  semaphore.rs  sxmutex.rs  task.rs  timer.rs
scems/src/os/vendors/: mod.rs
scems/src/os/vendors/cmsis_os/: cmsis.rs  mod.rs  wrapper.rs
scems/src/os/vendors/cmsis_os/cmsis/: mod.rs
scems/src/os/vendors/cmsis_os/wrapper/: events.rs  kernel.rs  mem.rs  message_queue.rs  mutex.rs  semaphore.rs  sxmutex.rs  task.rs  timer.rs
sces-addons/sces-svc/: Cargo.toml
sces-addons/sces-svc-alive/: Cargo.toml
sces-addons/sces-svc-alive/src/: native.rs
sces-addons/sces-svc-alive/src/native/: queue.rs  status.rs
sces-addons/sces-svc-console/: Cargo.toml
sces-addons/sces-svc-console/src/: native.rs
sces-addons/sces-svc-console/src/native/: dispatch.rs  print.rs
sces-implements/sces-cmw/: Cargo.toml
sces-implements/sces-cmw/src/: lib.rs  native.rs  os.rs
sces-implements/sces-cmw/src-cwraps/inc/: sces-os.h  sces.h
sces-implements/sces-mcu-stm32/: Cargo.toml
sces-implements/sces-mcu-stm32/src/: device.rs  lib.rs  native.rs
sces-implements/sces-os-cmsis/: Cargo.toml
sces-implements/sces-os-cmsis/src/: events.rs  lib.rs  mem.rs  message_queue.rs  mutex.rs  native.rs  semaphore.rs  sxmutex.rs  task.rs  timer.rs
sces-implements/sces-os-threadx/: Cargo.toml
sces-implements/sces-os-threadx/src/: task.rs
sces/sces/: Cargo.toml
sces/sces-derive/: Cargo.toml
sces/sces-derive/src/: common.rs  lib.rs  mcu.rs
sces/sces-mcu/: Cargo.toml
sces/sces-mcu-stm32/: Cargo.toml
sces/sces-mcu-stm32/src/: native.rs  sample_queue.rs
sces/sces-mcu-stm32/src/device/: i2c.rs
sces/sces-mcu-stm32/src/native/: adc.rs  can.rs  flash.rs  i2c.rs  uart.rs
sces/sces-mcu/src/: adc.rs  can.rs  flash.rs  i2c.rs  spi.rs  tim.rs  uart.rs
sces/sces-os/: Cargo.toml  task.rs
sces/sces-os-cmsis/src/: native.rs  semaphore.rs  sxmutex.rs  timer.rs
sces/sces-os-threadx/src/: lib.rs  native.rs
sces/sces-os/src/: events.rs  lib.rs  mem.rs  message_queue.rs  mutex.rs  semaphore.rs  task.rs  timer.rs
sces/sces/src/: cell.rs  lib.rs  mcu.rs  os.rs  value.rs  vec.rs
scripts/: autolf.ps1  autolf.sh
(+35 files in other folders)
