[workspace]
resolver = "2"
members = [
    "main",
    "scems/scems",
    "scems/scems-derive",
    "scems/scems-mcu",
    "scems/scems-mcu-stm32",
    "scems/scems-os",
    "scems/scems-os-cmsis",
    "scems-addons/scems-svc",
    "scems-addons/scems-svc-alive",
    "scems-addons/scems-svc-console"
]

[profile.dev]
opt-level = 1
debug = true

[patch.crates-io]
scems = { path = "scems/scems" }
scems-derive = { path = "scems/scems-derive" }
scems-mcu = { path = "scems/scems-mcu" }
scems-mcu-stm32 = { path = "scems/scems-mcu-stm32" }
scems-os = { path = "scems/scems-os" }
scems-os-cmsis = { path = "scems/scems-os-cmsis" }
scems-svc = { path = "scems-addons/scems-svc" }
scems-svc-alive = { path = "scems-addons/scems-svc-alive" }
scems-svc-console = { path = "scems-addons/scems-svc-console" }
