[package]
name = "main"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "The example main crate for scems."

[lib]
name = "main"
crate-type = ["rlib", "staticlib"]
test = false
bench = false

[dependencies]
scems = "0.1.0"
scems-addons = "0.1.0"

[build-dependencies]
cc = "1.0"

[features]
challen-v2-f429 = ["scems/mcu-stm", "scems/os-cmsis-os"]
example-io-lamp = ["challen-v2-f429"]
example-uart-echo = ["challen-v2-f429"]
