[package]
name = "main"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "The example main crate for scems."

[lib]
name = "main"
crate-type = ["rlib", "staticlib"]
test = false
bench = false

[dependencies]
log = "0.4"
scems = "0.1.0"
scems-mcu = "0.1.0"
scems-mcu-stm32 = "0.1.0"
scems-os = "0.1.0"
scems-os-cmsis = "0.1.0"
scems-svc = "0.1.0"
scems-svc-alive = "0.1.0"
scems-svc-console = "0.1.0"

[build-dependencies]
cc = "1.0"

[features]
challen-v2-f429 = []
example-adc = ["challen-v2-f429"]
example-io-lamp = ["challen-v2-f429"]
example-uart-echo = ["challen-v2-f429"]
