[package]
name = "main"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "The example main crate for sces."

[lib]
name = "main"
crate-type = ["rlib", "staticlib"]
test = false
bench = false

[dependencies]
log = "0.4"
sces = "0.1.0"
sces-mcu = "0.1.0"
sces-mcu-stm32 = "0.1.0"
sces-os = "0.1.0"
sces-os-cmsis = "0.1.0"
sces-svc = "0.1.0"
sces-svc-alive = "0.1.0"
sces-svc-console = "0.1.0"

[build-dependencies]
cc = "1.0"

[features]
challen-v2-f429 = []
stm32h573i-dk = []
example-adc = ["challen-v2-f429"]
example-io-lamp = ["challen-v2-f429"]
example-uart-echo = ["challen-v2-f429"]
