[package]
name = "scems-addons"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Sample Common Embedded Middleware Software - Addons."

[lib]
name = "scems_addons"
test = false
bench = false

[dependencies]
scems = "0.1.0"

[features]
