[package]
name = "scems"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Sample Common Embedded Middleware Software"

[lib]
name = "scems"
test = false
bench = false

[dependencies]
scems-marco = "0.1.0"

[features]
mcu-stm = []
os-cmsis-os = []
