[package]
name = "scems-svc-console"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Sample Common Embedded Middleware Software - Console Service."

[lib]
name = "scems_svc_console"
test = false
bench = false

[dependencies]
scems = "0.1.0"
log = "0.4"

[features]
