[package]
name = "scems-mcu-stm32"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Sample Common Embedded Middleware Software - STM32 HAL Pack"

[lib]
name = "scems_mcu_stm32"
test = false
bench = false

[dependencies]
scems = "0.1.0"
scems-derive = "0.1.0"
scems-mcu = "0.1.0"

[features]
