[package]
name = "scems-mcu"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Sample Common Embedded Middleware Software - MCU Definitions"

[lib]
name = "scems_mcu"
test = false
bench = false

[dependencies]
scems = "0.1.0"
scems-derive = "0.1.0"

[features]
