[package]
name = "scems-os-cmsis"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Sample Common Embedded Middleware Software - CMSIS OS Pack"

[lib]
name = "scems_os_cmsis"
test = false
bench = false

[dependencies]
scems = "0.1.0"
scems-derive = "0.1.0"
scems-os = "0.1.0"

[features]
