[package]
name = "sces-os-cmsis"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Simple Construction of Embedded Software - CMSIS OS Pack"

[lib]
name = "sces_os_cmsis"
test = false
bench = false

[dependencies]
sces = "0.1.0"
sces-derive = "0.1.0"

[features]
