[package]
name = "sces-mcu-stm32"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Khose-ie<khose-ie@outlook.com>"]
description = "Simple Construction of Embedded Software - STM32 HAL Pack"

[lib]
name = "sces_mcu_stm32"
test = false
bench = false

[dependencies]
sces = "0.1.0"
sces-derive = "0.1.0"
sces-mcu = "0.1.0"

[features]
